packagelon com.twittelonr.simclustelonrs_v2.common

import com.twittelonr.simclustelonrs_v2.thriftscala.elonmbelonddingTypelon
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.simclustelonrs_v2.thriftscala.LocalelonelonntityId
import com.twittelonr.simclustelonrs_v2.thriftscala.ModelonlVelonrsion
import com.twittelonr.simclustelonrs_v2.thriftscala.TopicId
import com.twittelonr.simclustelonrs_v2.thriftscala.{
  SimClustelonrselonmbelonddingId => ThriftSimClustelonrselonmbelonddingId
}
import com.twittelonr.simclustelonrs_v2.thriftscala.elonmbelonddingTypelon._
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId.elonntityId
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId.TwelonelontId
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId.UselonrId
import com.twittelonr.simclustelonrs_v2.thriftscala.{elonmbelonddingTypelon => SimClustelonrselonmbelonddingTypelon}

objelonct SimClustelonrselonmbelonddingId {

  val DelonfaultModelonlVelonrsion: ModelonlVelonrsion = ModelonlVelonrsion.Modelonl20m145k2020

  // elonmbelonddings which is availablelon in Contelonnt-Reloncommelonndelonr
  val TwelonelontelonmbelonddingTypelons: Selont[elonmbelonddingTypelon] =
    Selont(
      FavBaselondTwelonelont,
      FollowBaselondTwelonelont,
      LogFavBaselondTwelonelont,
      LogFavLongelonstL2elonmbelonddingTwelonelont
    )
  val DelonfaultTwelonelontelonmbelonddingTypelon: elonmbelonddingTypelon = LogFavLongelonstL2elonmbelonddingTwelonelont

  val UselonrIntelonrelonstelondInelonmbelonddingTypelons: Selont[elonmbelonddingTypelon] =
    Selont(
      FavBaselondUselonrIntelonrelonstelondIn,
      FollowBaselondUselonrIntelonrelonstelondIn,
      LogFavBaselondUselonrIntelonrelonstelondIn,
      ReloncelonntFollowBaselondUselonrIntelonrelonstelondIn,
      FiltelonrelondUselonrIntelonrelonstelondIn,
      FavBaselondUselonrIntelonrelonstelondInFromPelon,
      FollowBaselondUselonrIntelonrelonstelondInFromPelon,
      LogFavBaselondUselonrIntelonrelonstelondInFromPelon,
      FiltelonrelondUselonrIntelonrelonstelondInFromPelon,
      LogFavBaselondUselonrIntelonrelonstelondInFromAPelon,
      FollowBaselondUselonrIntelonrelonstelondInFromAPelon,
      UnfiltelonrelondUselonrIntelonrelonstelondIn
    )
  val DelonfaultUselonrIntelonrelonstInelonmbelonddingTypelon: elonmbelonddingTypelon = FavBaselondUselonrIntelonrelonstelondIn

  val ProducelonrelonmbelonddingTypelons: Selont[elonmbelonddingTypelon] =
    Selont(
      FavBaselondProducelonr,
      FollowBaselondProducelonr,
      AggrelongatablelonFavBaselondProducelonr,
      AggrelongatablelonLogFavBaselondProducelonr,
      RelonlaxelondAggrelongatablelonLogFavBaselondProducelonr,
      KnownFor
    )
  val DelonfaultProducelonrelonmbelonddingTypelon: elonmbelonddingTypelon = FavBaselondProducelonr

  val LocalelonelonntityelonmbelonddingTypelons: Selont[elonmbelonddingTypelon] =
    Selont(
      FavTfgTopic,
      LogFavTfgTopic
    )
  val DelonfaultLocalelonelonntityelonmbelonddingTypelon: elonmbelonddingTypelon = FavTfgTopic

  val TopicelonmbelonddingTypelons: Selont[elonmbelonddingTypelon] =
    Selont(
      LogFavBaselondKgoApelonTopic
    )
  val DelonfaultTopicelonmbelonddingTypelon: elonmbelonddingTypelon = LogFavBaselondKgoApelonTopic

  val AllelonmbelonddingTypelons: Selont[elonmbelonddingTypelon] =
    TwelonelontelonmbelonddingTypelons ++
      UselonrIntelonrelonstelondInelonmbelonddingTypelons ++
      ProducelonrelonmbelonddingTypelons ++
      LocalelonelonntityelonmbelonddingTypelons ++
      TopicelonmbelonddingTypelons

  delonf buildTwelonelontId(
    twelonelontId: TwelonelontId,
    elonmbelonddingTypelon: elonmbelonddingTypelon = DelonfaultTwelonelontelonmbelonddingTypelon,
    modelonlVelonrsion: ModelonlVelonrsion = DelonfaultModelonlVelonrsion
  ): ThriftSimClustelonrselonmbelonddingId = {
    asselonrt(TwelonelontelonmbelonddingTypelons.contains(elonmbelonddingTypelon))
    ThriftSimClustelonrselonmbelonddingId(
      elonmbelonddingTypelon,
      modelonlVelonrsion,
      IntelonrnalId.TwelonelontId(twelonelontId)
    )
  }

  delonf buildUselonrIntelonrelonstelondInId(
    uselonrId: UselonrId,
    elonmbelonddingTypelon: elonmbelonddingTypelon = DelonfaultUselonrIntelonrelonstInelonmbelonddingTypelon,
    modelonlVelonrsion: ModelonlVelonrsion = DelonfaultModelonlVelonrsion
  ): ThriftSimClustelonrselonmbelonddingId = {
    asselonrt(UselonrIntelonrelonstelondInelonmbelonddingTypelons.contains(elonmbelonddingTypelon))
    ThriftSimClustelonrselonmbelonddingId(
      elonmbelonddingTypelon,
      modelonlVelonrsion,
      IntelonrnalId.UselonrId(uselonrId)
    )
  }

  delonf buildProducelonrId(
    uselonrId: UselonrId,
    elonmbelonddingTypelon: elonmbelonddingTypelon = DelonfaultProducelonrelonmbelonddingTypelon,
    modelonlVelonrsion: ModelonlVelonrsion = DelonfaultModelonlVelonrsion
  ): ThriftSimClustelonrselonmbelonddingId = {
    asselonrt(ProducelonrelonmbelonddingTypelons.contains(elonmbelonddingTypelon))
    ThriftSimClustelonrselonmbelonddingId(
      elonmbelonddingTypelon,
      modelonlVelonrsion,
      IntelonrnalId.UselonrId(uselonrId)
    )
  }

  delonf buildLocalelonelonntityId(
    elonntityId: SelonmanticCorelonelonntityId,
    languagelon: String,
    elonmbelonddingTypelon: elonmbelonddingTypelon = DelonfaultLocalelonelonntityelonmbelonddingTypelon,
    modelonlVelonrsion: ModelonlVelonrsion = DelonfaultModelonlVelonrsion
  ): ThriftSimClustelonrselonmbelonddingId = {
    ThriftSimClustelonrselonmbelonddingId(
      elonmbelonddingTypelon,
      modelonlVelonrsion,
      IntelonrnalId.LocalelonelonntityId(
        LocalelonelonntityId(elonntityId, languagelon)
      )
    )
  }

  delonf buildTopicId(
    topicId: TopicId,
    languagelon: Option[String] = Nonelon,
    country: Option[String] = Nonelon,
    elonmbelonddingTypelon: elonmbelonddingTypelon = DelonfaultTopicelonmbelonddingTypelon,
    modelonlVelonrsion: ModelonlVelonrsion = DelonfaultModelonlVelonrsion
  ): ThriftSimClustelonrselonmbelonddingId = {
    ThriftSimClustelonrselonmbelonddingId(
      elonmbelonddingTypelon,
      modelonlVelonrsion,
      IntelonrnalId.TopicId(
        TopicId(topicId, languagelon, country)
      )
    )
  }

  // elonxtractor objelonct for IntelonrnalIds that wrap Long
  objelonct LongIntelonrnalId {
    delonf unapply(iid: IntelonrnalId): Option[Long] = iid match {
      caselon IntelonrnalId.TwelonelontId(id) => Somelon(id)
      caselon IntelonrnalId.UselonrId(id) => Somelon(id)
      caselon IntelonrnalId.elonntityId(id) => Somelon(id)
      caselon _ => Nonelon
    }
  }

  // elonxtractor objelonct for SimClustelonrelonmbelonddingIds with IntelonrnalIds that wrap Long
  objelonct LongSimClustelonrselonmbelonddingId {
    delonf unapply(id: ThriftSimClustelonrselonmbelonddingId): Option[Long] =
      LongIntelonrnalId.unapply(id.intelonrnalId)
  }

  // Only for delonbuggelonrs.
  delonf buildelonmbelonddingId(
    elonntityId: String,
    elonmbelonddingTypelon: elonmbelonddingTypelon,
    modelonlVelonrsion: ModelonlVelonrsion = DelonfaultModelonlVelonrsion
  ): ThriftSimClustelonrselonmbelonddingId = {
    if (TwelonelontelonmbelonddingTypelons.contains(elonmbelonddingTypelon)) {
      buildTwelonelontId(elonntityId.toLong, elonmbelonddingTypelon, modelonlVelonrsion)
    } elonlselon if (UselonrIntelonrelonstelondInelonmbelonddingTypelons.contains(elonmbelonddingTypelon)) {
      buildUselonrIntelonrelonstelondInId(elonntityId.toLong, elonmbelonddingTypelon, modelonlVelonrsion)
    } elonlselon if (ProducelonrelonmbelonddingTypelons.contains(elonmbelonddingTypelon)) {
      buildProducelonrId(elonntityId.toLong, elonmbelonddingTypelon, modelonlVelonrsion)
    } elonlselon if (LocalelonelonntityelonmbelonddingTypelons.contains(elonmbelonddingTypelon)) {
      buildLocalelonelonntityId(elonntityId.toLong, "elonn", elonmbelonddingTypelon, modelonlVelonrsion)
    } elonlselon if (TopicelonmbelonddingTypelons.contains(elonmbelonddingTypelon)) {
      buildTopicId(
        elonntityId.toLong,
        Somelon("elonn"),
        elonmbelonddingTypelon = elonmbelonddingTypelon,
        modelonlVelonrsion = modelonlVelonrsion)
    } elonlselon {
      throw nelonw IllelongalArgumelonntelonxcelonption(s"Invalid elonmbelondding typelon: $elonmbelonddingTypelon")
    }
  }

  implicit val intelonrnalIdOrdelonring: Ordelonring[IntelonrnalId] =
    Ordelonring.by(intelonrnalId => intelonrnalId.hashCodelon())

  implicit val simClustelonrselonmbelonddingIdOrdelonring: Ordelonring[ThriftSimClustelonrselonmbelonddingId] =
    Ordelonring.by(elonmbelonddingId =>
      (elonmbelonddingId.elonmbelonddingTypelon.valuelon, elonmbelonddingId.modelonlVelonrsion.valuelon, elonmbelonddingId.intelonrnalId))

  // Uselon elonnum for felonaturelon switch
  objelonct Topicelonnum elonxtelonnds elonnumelonration {
    protelonctelond caselon class elonmbelonddingTypelon(elonmbelonddingTypelon: SimClustelonrselonmbelonddingTypelon) elonxtelonnds supelonr.Val
    import scala.languagelon.implicitConvelonrsions
    implicit delonf valuelonToelonmbelonddingTypelon(valuelon: Valuelon): elonmbelonddingTypelon =
      valuelon.asInstancelonOf[elonmbelonddingTypelon]

    val FavTfgTopic: Valuelon = elonmbelonddingTypelon(SimClustelonrselonmbelonddingTypelon.FavTfgTopic)
    val LogFavBaselondKgoApelonTopic: Valuelon = elonmbelonddingTypelon(
      SimClustelonrselonmbelonddingTypelon.LogFavBaselondKgoApelonTopic)
  }

}
